tests/ui/env-macro/env-escaped-var.rs
fn main() {
    env!("\t"); //~ERROR environment variable `\t` not defined at compile time
}
